Updated self hosted values yaml

--- a/cluster-management/self-hosted.mdx
+++ b/cluster-management/self-hosted.mdx
@@ -115,7 +115,7 @@ mo_platform_user:
     enabled: false
 mogenius:
   imagePullSecrets:
-  - mo-platform-credentials
+  - mo-registry-credentials
 mysql:
   enabled: true
   ssl: false
